<resources>
    <string name="wifi_app_name">Wifi设置</string>

    <string name="signal_strength">信号强度</string>
    <string name="security_level">安全性</string>
    <string name="wifi_password">密码</string>
    <string name="show_wifi_password">显示密码</string>
    <string name="connect_wifi">连接</string>
    <string name="disconnect_wifi">断开并清空密码</string>
    <string name="close_window">关闭窗口</string>
    <string name="conn_status">连接状态</string>
    <string name="ip_address">IP地址</string>
</resources>
